--- a/known_devices.yaml
+++ b/known_devices.yaml
@@ -1,42 +1,40 @@
-erwin_erwin:
+erwin_iphoneXR:
   hide_if_away: false
   icon:
-  mac: b8:53:ac:6a:e4:c0
   name: Erwin
   picture:
   track: true
   vendor: Apple
   gravatar: erwin@erwinvanlonden.net
 
-erwin_luna:
+cleo_iphone6:
   hide_if_away: false
   icon:
   mac:
-  name: Luna
-  picture:
-  track: true
-  vendor: Apple
-
-erwin_cleo_oppo:
-  hide_if_away: false
-  icon:
-  mac:
-  name: Cleo
+  name: cleo
   picture:
   track: true
 
-erwin:
-  hide_if_away: false
-  icon:
-  mac:
-  name: drevl-phone
-  picture:
-  track: true
-
-erwin_437f45be_1316_49ff_ad25_0246cbb3983f:
+erwin_iphone7:
   hide_if_away: false
   icon:
   mac:
   name: erwin
+  picture:
+  track: true
+
+luna_iphone:
+  hide_if_away: false
+  icon:
+  mac:
+  name: luna
+  picture:
+  track: true
+
+erwins_iphone:
+  hide_if_away: false
+  icon:
+  mac:
+  name: Erwin’s iPhone
   picture:
   track: true
